handling of all the possibilities + creation of other views

--- a/templates/home/toosoon.html.twig
+++ b/templates/home/toosoon.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-        <h1>Votre prochaine séance de sport se déroulera au {{ practicePlace }}.</h1>
+    <h1>Vous ne pouvez pas regarder plus de 7 jours à l'avance :(</h1>
 {% endblock %}
 
 {% block title %}
