--- a/templates/home/nosessions.html.twig
+++ b/templates/home/nosessions.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-        <h1>Votre prochaine séance de sport se déroulera au {{ practicePlace }}.</h1>
+    <h1>Vous n'avez plus de séance de sport :(</h1>
 {% endblock %}
 
 {% block title %}
