--- a/templates/home/nosessions.html.twig
+++ b/templates/home/nosessions.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Vous n'avez plus de séance de sport :(</h1>
+    <h2 class="no-sessions-title">Vous n'avez plus de séance de sport :(</h2>
 {% endblock %}
 
 {% block title %}
