--- a/templates/home/toosoon.html.twig
+++ b/templates/home/toosoon.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Vous ne pouvez pas regarder plus de 7 jours à l'avance :(</h1>
+    <h2 class="soon-title">Vous ne pouvez pas regarder plus de 7 jours à l'avance :(</h2>
 {% endblock %}
 
 {% block title %}
