--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <link rel="stylesheet" href="{{ asset('style.css') }}">
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -14,6 +14,15 @@
         {% endblock %}
     </head>
     <body>
+    <div class="header-container">
+        <div class="main-title-container">
+            <h1 class="main-title">Where Do We Train ?</h1>
+            <div class="main-title-line"></div>
+        </div>
+
+        <h3 class="subtitle"><i>Developed by Adam</i></h3>
+    </div>
+
         {% block body %}{% endblock %}
     </body>
 </html>
