--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
             <div class="main-title-line"></div>
         </div>
 
-        <h3 class="subtitle"><i>Developed by Adam</i></h3>
+        <h3 class="subtitle"><i>Developed by Adam RAFIK</i></h3>
     </div>
 
         {% block body %}{% endblock %}
